@@ -1,6 +1,10 @@
 Revision history for Perl extension App::Sqitch
 
 0.912
+     - Fall back on `Sqitch->sysuser` when looking for the PostgreSQL user,
+       rather than just `$ENV{USER}`. The method does a lot more work to find
+       the system user name. This will hopefully also fix test failures on
+       systems where `$ENV{USER}` is not set.
 
 0.911 2012-08-23T19:19:17Z
      - Fixed more platform-specific test failures in `t/base.t`.
